--- a/generators/npc-generator.html
+++ b/generators/npc-generator.html
@@ -303,13 +303,13 @@ title: D&D 5e NPC Generator
     <div id="npc-name-container" class="npc-flex-container">
         <h2 id="npc-name-header">Mario</h2>
         <img src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate" class="regen-button"
-            onclick="regenField('npc-name-header')">
+            onclick="regenField('npc-name-header')" width="20px" height="20px">
     </div>
     <!-- Race -->
     <div id="npc-race-details" class="npc-flex-container">
         <p id="npc-race-text">Male human, 41 years old</p>
         <img src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate" class="regen-button"
-            onclick="regenField('npc-race-text')">
+            onclick="regenField('npc-race-text')" width="20px" height="20px">
     </div>
     <!-- Appearance -->
     <div id="npc-appearance-details" class="npc-flex-container">
@@ -318,7 +318,7 @@ title: D&D 5e NPC Generator
             <span id="npc-appearance-text">Short stature, bulbous nose, moustache</span>
         </p>
         <img src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate" class="regen-button"
-            onclick="regenField('npc-appearance-text')">
+            onclick="regenField('npc-appearance-text')" width="20px" height="20px">
     </div>
     <!-- Clothing -->
     <div id="npc-clothing-details" class="npc-flex-container">
@@ -327,7 +327,7 @@ title: D&D 5e NPC Generator
             <span id="npc-clothing-text">Red shirt, blue overalls, red cap</span>
         </p>
         <img src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate" class="regen-button"
-            onclick="regenField('npc-clothing-text')">
+            onclick="regenField('npc-clothing-text')" width="20px" height="20px">
     </div>
     <!-- Voice -->
     <div id="npc-voice-details" class="npc-flex-container">
@@ -336,7 +336,7 @@ title: D&D 5e NPC Generator
             <span id="npc-voice-text">Stereotypical Italian accent</span>
         </p>
         <img src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate" class="regen-button"
-            onclick="regenField('npc-voice-text')">
+            onclick="regenField('npc-voice-text')" width="20px" height="20px">
     </div>
     <!-- Personality -->
     <div id="npc-personality-details" class="npc-flex-container">
@@ -345,7 +345,7 @@ title: D&D 5e NPC Generator
             <span id="npc-personality-text">Mario is determined and loyal to a fault</span>
         </p>
         <img src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate" class="regen-button"
-            onclick="regenField('npc-personality-text')">
+            onclick="regenField('npc-personality-text')" width="20px" height="20px">
     </div>
     <!-- Profession -->
     <div id="npc-profession-details" class="npc-flex-container">
@@ -354,7 +354,7 @@ title: D&D 5e NPC Generator
             <span id="npc-profession-text">Mario is a legendary plumber.</span>
         </p>
         <img src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate" class="regen-button"
-            onclick="regenField('npc-profession-text')">
+            onclick="regenField('npc-profession-text')" width="20px" height="20px">
     </div>
     <!-- Motivation -->
     <div id="npc-motivation-details" class="npc-flex-container">
@@ -363,7 +363,7 @@ title: D&D 5e NPC Generator
             <span id="npc-motivation-text">Mario seeks to free Princess Peach from the castle.</span>
         </p>
         <img src="/assets/img/icons/Refresh_icon.svg.png" alt="Regenerate" class="regen-button"
-            onclick="regenField('npc-motivation-text')">
+            onclick="regenField('npc-motivation-text')" width="20px" height="20px">
     </div>
 </div>
 
