Added error message HTML element and corresponding JS function.

--- a/generators/magic-item-generator.html
+++ b/generators/magic-item-generator.html
@@ -170,6 +170,10 @@ title: Homebrew Magic Item Generator
   <input type="submit" value="Loot the Body" class="generator-button" onclick="getItems()">
 </div>
 
+<div id="error-message-div">
+  <p id="error-message-text" class="red-text" style="display: none;">Error text placeholder.</p>
+</div>
+
 <!-- Item Containers -->
 <div id="result-container">
   <!-- Item 1-->
